--- a/client/components/navbar/navbar.scss
+++ b/client/components/navbar/navbar.scss
@@ -5,6 +5,10 @@
   width: 100%;
   transition: opacity 0.2s;
   opacity: 0;
+  
+  @media screen and (min-width: 768px) {
+      z-index: 98;
+  }
 
   .navbar-nav {
     margin: 0;
@@ -21,7 +25,7 @@
       transition: color 1s, margin-right 0.5s;
     }
 
-    @media screen and (min-width: 769px) and (max-width: 1000px) {
+    @media screen and (min-width: 768px) and (max-width: 1000px) {
       display:none;
     }
   }
@@ -48,7 +52,7 @@
       }
     }
 
-    @media screen and (min-width: 769px) {
+    @media screen and (min-width: 768px) {
       width: auto;
       padding-right: 25px;
     }
